style.css
/* ... */
.about-text h2 {
  margin: 50px 0 10px;
  font-size: 28px;
  font-style: italic;
}
.about-text h3 {
  font-size: 20px;
  font-style: italic;
  color: #797979;
}

/*----Section features-----*/

#features {
  padding-top: 50px;
  padding-bottom: 50px;
}

.feature-row {
  width: 80%;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
}
.feature-col {
  flex-basis: 25%;
  text-align: center;
}
.feature-col img {
  width: 100px;
}
.feature-col h4 {
  margin-bottom: 15px;
  font-size: 20px;
  font-weight: 400;
}
.feature-btn {
  margin: 80px auto 0;
  display: flex;
  align-items: flex-end;
  justify-content: center;
}
.feature-btn .line {
  text-align: right;
  display: inline-block;
  margin-right: 25px;
}
/*--Section couses--*/

#courses {
  padding: 100px 0;
}
.course-row {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}
.course-right-col {
  flex-basis: 50%;
}
.course-right-col img {
  width: 100%;
}
.course-left-col {
  flex-basis: 50%;

}
.course-text {
  max-width: 350px;
}
.course-text button {
  margin: 30px 0;
}
#offer button {
  margin: 30px 0;
}

/*--Section testimonials--*/
.img-testimonials {
  width: 200px;
  height: 200px;
  border-radius: 50%;
}

#testimonials blockquote::before {
  content: open-quote;
}

#testimonials blockquote::after {
  content: close-quote;
}

#testimonials blockquote {
  font-family: "Verdana";
  font-size: 15px;
  font-weight: 300;
  line-height: 30px;
  color: #808080;
  quotes: "“" "”" "‘" "’";
  border-left: none;
}

#testimonials figcaption {
  position: relative;
}

#testimonials cite {
  color: grey;
}

/*--testimonials Card--*/
.testimonials-card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border-radius: 20px;
  text-align: center;
  position: relative;
  height: 100%;
}

.testimonials-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.img-testimonials-card {
  width: 15vw;
  height: 15vw;
  max-width: 150px;
  max-height: 150px;
  border-radius: 50%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  position: relative;
  margin-top: -75px;
}

.quote {
  padding: 20px;
}

#testimonials .swiper-container {
  width: 100%;
  padding-top: 100px;
  padding-bottom: 50px;
}

#testimonials .swiper-slide {
  background-position: center;
  background-size: cover;
  width: 33.33%;
  min-width: 200px;
  height: 400px;
}

.container {
  margin-right: 100px;
  margin-left: 100px;
}

@media screen and (max-width: 1000px) {
  .img-testimonials-card {
    margin-top: -7.5vw;
  }
}

/*-- Section Contact --*/

.contact-row {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}
.contact-left-col,
.contact-right-col {
  flex-basis: 50%;
}
.contact-right-col img {
  width: 100%;
}
form {
  max-width: 350px;
  margin: 30px 0;
}

form input {
  width: 100%;
  padding: 12px 10px;
  margin-bottom: 5px;
  outline: none;
  box-shadow: none;
  box-sizing: border-box;
  border: 2px solid #fab3c4;
}
.btn-box {
  width: 100%;
  display: flex;
  justify-content: space-between;
}
.btn-box button {
  flex-basis: 48%;
  padding: 18px 0;
}

/* Footer  */
  
#footer {
  background-color: white;
  color: black;
}
hr {
  width: 100%;
  border: 0;
  border-top: 1px solid #f67c92;
}
.footer-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}
.footer-left-col {
  flex-basis: 55%;
  margin-top: 5px;
}
.footer-right-col {
  flex-basis: 45%;
  margin-top: 5px;
}
.footer-links {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.link-title h4 {
  color: #fab3c4;
  margin-bottom: 20px;
}
.link-title small {
  font-size: 13px;
  color: #777777;
}
.footer-info {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  flex-wrap: wrap;
}
.footer-logo img {
  width: 230px;
}
.footer-logo button {
  padding: 11px 34px;
  margin-top: 20px;
  font-size: 11px;
}
.copyright-text,
.footer-logo {
  flex-basis: 40%;
}

.social-icons {
  position: fixed;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  width: 30px;
  z-index: 1;
}

.social-icons .fab {
  display: block;
  margin: 0 auto 20px;
  cursor: pointer;
  font-size: 20px;
  text-align: center;
  color: #f67c92;
}

.social-icons .fab:hover {
  opacity: 0.7;
}

.footer-social .fab{
  color: #f67c92;
}
.footer-social .fab:hover{
  opacity: 0.7;
}
.bottom-bar {
  position: relative;
  text-align: center;
  font-size: .9em;
  margin: auto;
  padding: 0 0 0 0;
  color: #777777;
}
.desktop-view-footer {
  display: block;
  padding-bottom: 30px;
}
.mobile-view-footer {
  display: none;
}

@media only screen and (min-width:450px) and (max-width:770px){
  .logo{
    margin-left: 45%;
  }
}

@media only screen and (max-width: 1000px){
  .footer-right-col {
    margin-right: -50px;
  }
}
/* ... */

